--- a/client/angular_components/directives/table/directive.html
+++ b/client/angular_components/directives/table/directive.html
@@ -1,9 +1,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Recieved</th>
-      <th>Group</th>
-      <th>ID</th>
+      <th>Received</th>
+      <th>Device Group/Rule Topic</th>
+      <th>Device ID/Rule Threshold</th>
       <th>Temperature</th>
     </tr>
   </thead>
