--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <title>ThingFabric </title>
     <link rel="stylesheet" href="/client/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/client/bower_components/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/client/app.css"/>
   </head>
   <body ng-controller="HerokuDemoController" class="heroku-demo">
@@ -28,16 +29,19 @@
         <div class="col-lg-12 well heroku-demo-table">
           <div heroku-demo-table></div>
         </div>
+        <div class="col-lg-12 well">
+          <div heroku-demo-map></div>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="/client/bower_components/underscore/underscore.js"></script>
     <script type="text/javascript" src="/client/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/client/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/client/bower_components/highstock-release/highstock.js"></script>
+    <script type="text/javascript" src="/client/bower_components/leaflet/dist/leaflet.js"></script>
     <script type="text/javascript" src="/client/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="/client/angular_components/services/websocket.js"></script>
     <script type="text/javascript" src="/client/angular_components/directives/table/directive.js"></script>
-    <script type="text/javascript" src="/client/angular_components/directives/chart/directive.js"></script>
+    <script type="text/javascript" src="/client/angular_components/directives/map/directive.js"></script>
     <script type="text/javascript" src="/client/app.js"></script>
   </body>
 </html>
