--- a/client/index.html
+++ b/client/index.html
@@ -29,10 +29,11 @@
         <div class="col-lg-12 well heroku-demo-table">
           <div heroku-demo-table></div>
         </div>
-        <div class="col-lg-12 well">
+<!--        <div class="col-lg-12 well">
           <div heroku-demo-map></div>
         </div>
       </div>
+-->
     </div>
     <script type="text/javascript" src="/client/bower_components/underscore/underscore.js"></script>
     <script type="text/javascript" src="/client/bower_components/jquery/dist/jquery.min.js"></script>
