--- a/client/angular_components/directives/table/directive.html
+++ b/client/angular_components/directives/table/directive.html
@@ -13,8 +13,9 @@
       <th>{{ message.date | date: 'medium' }}</th>
       <th>{{ message.stuff }}</th>
       <th>{{ message.thing }}</th>
-      <th>{{ message.message.temperature }}&deg;F</th>
+      <th>{{ message.message }}</th>
+<!--      <th>{{ message.message.temperature }}&deg;F</th>
       <th>{{ message.message.location.latitude || message.message.location.split(',')[0] }}, {{ message.message.location.longitude || message.message.location.split(',')[1] }}</th>
-    </tr>
+-->    </tr>
   </tbody>
 </table>
