--- a/client/angular_components/directives/table/directive.html
+++ b/client/angular_components/directives/table/directive.html
@@ -4,9 +4,10 @@
       <th>Received</th>
       <th>Device Group/Rule Topic</th>
       <th>Device ID/Rule Threshold</th>
-      <th>Temperature</th>
+      <th>Message</th>
+<!--      <th>Temperature</th>
       <th>Location</th>
-    </tr>
+-->    </tr>
   </thead>
   <tbody>
     <tr ng-repeat="message in messages" ng-class="{ warning: message.stuff==='$SYS' || message.stuff.indexOf('rule')>-1 }">
