--- a/client/index.html
+++ b/client/index.html
@@ -17,11 +17,11 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">GongBot MQTT Monitor</a>
         </div>
-<!--        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="http://2lemetry.com">2lemetry</a></li>
           </ul>
-        </div>  -->
+        </div> 
       </div>
     </nav>
     <div class="container heroku-demo">
